# filesystem-websocket-notifier

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  filesystem-watcher-comparison.md  install-dmon.bash
src/: main.cpp
